--- a/src/main/webapp/style.css
+++ b/src/main/webapp/style.css
@@ -1,3 +1,16 @@
+button.aaaaa {
+		background-color: #007bff;
+	    color: white;
+	    padding: 12px 25px;
+	    border: none;
+	    border-radius: 6px;
+	    cursor: pointer;
+	    font-size: 1.1em;
+	    transition: background-color 0.3s ease, transform 0.2s ease;
+	    display: inline-block;
+	    margin: 0 10px;
+}
+
 body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     margin: 0;
@@ -257,3 +270,14 @@ tr:hover {
 .main-nav a:hover {
     background-color: #2c3e50;
 }
+
+#calendar {
+  max-width: 600px;
+  margin: 20px auto;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  background-color: #f9f9f9;
+}
+
+
